--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         id: hello
         uses: actions/create-github-action@v1
         with:
-          who-to-greet: 'Mona the Octocat'
+          who-to-greet: 'hyelim'
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
