--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,7 @@ jobs:
     name: A job to say hello
     steps:
       - name: Hello world action step
-        id: hello
-        uses: create-github-action/create-github-action@v1
+        id: djc06048/create-github-action@v1
         with:
           who-to-greet: 'hyelim'
       # Use the output from the `hello` step
